--- a/Documentazione/presentazione.ipynb
+++ b/Documentazione/presentazione.ipynb
@@ -98,7 +98,7 @@
    },
    "outputs": [],
    "source": [
-    "stato_occhi = {'rilevamenti': [2]*misurazioni, 'occhi_chiusi': False} "
+    "stato_occhi = {'rilevamenti': [2]*MISURAZIONI, 'occhi_chiusi': False} "
    ]
   },
   {
@@ -382,24 +382,6 @@
     "looper2.queue(sound2)\n",
     "avviso2 = pyglet.media.Player()\n",
     "avviso2.queue(looper2)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Viene definita la variabile booleana **distrazione** e assegnato il valore *False* all'inizio."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "distrazione = False"
    ]
   },
   {
